Updated HTML to include lists so I can fix spacing issue with weather

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@ h5 {
   font-size: 18px;
   line-height: 28px;
   padding: 0px 30px 50px;
+  list-style: none;
 }
 
 /* 30 - Big temp*/
@@ -101,9 +102,14 @@ button:hover {
   bottom: 20px;
   left: 100px;
 }
+
 /* Celsius & Fahrenheit next to temp */
 .units {
   font-size: 20px;
   color: #e8630a;
   text-decoration: none;
+}
+
+li:first-letter {
+  text-transform: capitalize;
 }
